Lift loading screen to avoid covering footer

--- a/src/styles/Loading.css
+++ b/src/styles/Loading.css
@@ -6,6 +6,7 @@
     bottom: 35px;
     left: 0px;
     background-color: var(--main-white);
+    height: 75vh;
 }
 
 #loading-logo {
